feat: api auth