@@ -6,8 +6,9 @@ import com.cvconnect.service.RoleMenuService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @Service
 public class RoleMenuServiceImpl implements RoleMenuService {
@@ -18,11 +19,16 @@ public class RoleMenuServiceImpl implements RoleMenuService {
     public List<String> getAuthorities(Long userId) {
         List<RoleMenuProjection> roleMenuProjections = roleMenuRepository.findAuthoritiesByUserId(userId);
         return roleMenuProjections.stream()
-                .map(object -> {
-                    String permission = object.getPermission();
+                .flatMap(object -> {
                     String menuCode = object.getMenuCode();
-                    return permission != null ? permission + ":" + menuCode : menuCode;
+                    String permission = object.getPermission();
+                    if (permission != null && !permission.isEmpty()) {
+                        return Arrays.stream(permission.split(","))
+                                .map(per -> per + ":" + menuCode);
+                    }
+                    return Stream.of();
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
+
 }
